fixed spacing

--- a/style.css
+++ b/style.css
@@ -58,8 +58,7 @@ text-decoration: underline;
 /* Contact */
 
 .contact {
-	display: flex;
-	justify-content: center;
+	margin: 1em 0;
 }
 
 .contact a {
@@ -78,7 +77,7 @@ text-decoration: underline;
 /* About Me */
 
 .about p {
-	margin: 0 auto;
+	margin: 1em auto;
 	width: 50%;
 }
 
